--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "mongoose": "^8.2.3",
     "reflect-metadata": "^0.2.0",
