--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       - PORT=3000
       - JWT_SECRET=123
-      - MONGO_URI=mongodb://mondo_db:27017/mongo-graphql
+      - MONGO_URI=mongodb://mongo_db:27017/mongo-graphql
     ports:
       - '3000:3000'
     depends_on:
