--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     ports:
       - '27017:27017'
     volumes:
-      - './mongodb-backup:data/db'
+      - './mongodb-backup:/data/db'
     networks:
       - nestjs_network
 
