--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - '3000:3000'
     depends_on:
       - database
+      - rabbitmq
     networks:
       - nestjs_network
 
@@ -25,6 +26,16 @@ services:
     networks:
       - nestjs_network
 
+  rabbitmq:
+    image: 'rabbitmq:3-management'
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    volumes:
+      - 'rabbitmq_data:/data'
+
+volumes:
+  rabbitmq_data:
 networks:
   nestjs_network:
     driver: bridge
