--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
+    "@golevelup/nestjs-rabbitmq": "^5.1.0",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/microservices": "^10.3.7",
     "@nestjs/platform-express": "^10.0.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "mongoose": "^8.2.3",
