--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - PORT=3000
       - JWT_SECRET=123
       - MONGO_URI=mongodb://mongo_db:27017/mongo-graphql
+      - RABBIT_MQ=amqp://rabbit_c:5672
     ports:
       - '3000:3000'
     depends_on:
@@ -28,6 +29,7 @@ services:
 
   rabbitmq:
     image: 'rabbitmq:3-management'
+    container_name: rabbit_c
     ports:
       - '5672:5672'
       - '15672:15672'
